fixed content spacing on phones

--- a/src/styles/components/_content-lockup.styl
+++ b/src/styles/components/_content-lockup.styl
@@ -21,6 +21,11 @@
     min-height: 340px;
   }
 
+  @media mq-phone-lg {
+    height: auto;
+    min-height: 211px;
+  }
+
   &:first-of-type {
     margin-top: 0;
   }
@@ -54,6 +59,10 @@
         height: 100%;
         min-width: 100%;
         width: auto;
+      }
+
+      @media mq-phone-lg {
+        height: auto;
       }
     }
 
