--- a/web/css/app.css
+++ b/web/css/app.css
@@ -721,6 +721,12 @@ img.lazyloaded {
     min-height: 340px;
   }
 }
+@media all and (max-width: 640px) {
+  .content-lockup {
+    height: auto;
+    min-height: 211px;
+  }
+}
 .content-lockup:first-of-type {
   margin-top: 0;
 }
@@ -757,6 +763,12 @@ img.lazyloaded {
     height: 100%;
     min-width: 100%;
     width: auto;
+  }
+}
+@media all and (max-width: 640px) {
+  .content-lockup__image img,
+  .content-lockup__video img {
+    height: auto;
   }
 }
 .content-lockup__image iframe,
